--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/tsbc/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/TSBC/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TSBC</title>
     <style type="text/css">
@@ -17,8 +17,8 @@
         font-family: '思源黑体';
       }
     </style>
-    <script type="module" crossorigin src="/tsbc/assets/index.39fb64db.js"></script>
-    <link rel="stylesheet" href="/tsbc/assets/index.e82918f1.css">
+    <script type="module" crossorigin src="/TSBC/assets/index.39fb64db.js"></script>
+    <link rel="stylesheet" href="/TSBC/assets/index.e82918f1.css">
   </head>
   <body onselectstart="return false">
     <div id="app"></div>
